# ShootingRangeTargetDetect

./: CMakeLists.txt
src/: main.cpp  pipeline.cpp  pipeline.hpp
src/modules/: imodule.hpp  prepareimage.cpp  prepareimage.hpp  shottracking.cpp  shottracking.hpp  targetdetect.cpp  targetdetect.hpp
